2011-08-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-03
        * Fix compiler warning.

2011-08-03  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-02
        * JobOptions update.

2011-07-14  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-01
        * JobOptions update.

2011-07-13  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-00
        * New tool EmEfficienciesMonTool from Hardeep.

2011-07-01 Rohin Narayan <narayan@physi.uni-heidelberg.de>
    * Tas as TrigT1CaloMonitoring-00-09-03
	* PPrStabilityMon: New private variable m_lumiBlockMax

2011-06-29 Rohin Narayan <narayan@physi.uni-heidelberg.de>
    * Tag as TrigT1CaloMonitoring-00-09-02
	* PPrStabilityMon: pass TriggerTower tool to Plot Manager

2011-06-29 Rohin Narayan <narayan@physi.uni.heidelberg.de>
	* Tag as TrigT1CaloMonitoring-00-09-01
	* moved disabled tower look up for FineTime calculation 
	to PPrStabilityMon

2011-05-20  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-09-00
        * jobOptions update.
        * Should have changed to 09-00 at 08-06.

2011-05-17  Ivana Hristova <ivana.hristova@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-08-07
	* PPrMon: Pad numbers with zeros in histogram names.

2011-05-11  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-08-06
        * Move TrigT1CaloLWHistogramTool to new package to
          resolve circular dependency.

2011-05-10  Ivana Hristova <ivana.hristova@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-08-05
	* PPrMon: Use ThreshVec index in histogram name.

2011-05-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-08-04
        * Protect DEBUG messages.

2011-05-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-08-03
        * JobOptions update.

2011-05-02  Ivana Hristova <ivana.hristova@cern.ch>