@@ -1,4 +1,8 @@
 2011-08-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-10-04
+        * Reorder RoI histograms on DQ.
+
+2011-08-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-10-03
         * Fix compiler warning.
 
